Detect AC adapter on Apple hardware

On Apple hardware the sysfs directory for the mains power supply
is called ADPx and not ACx.

https://bugzilla.gnome.org/show_bug.cgi?id=777149